fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -114,7 +114,7 @@ section, summary, time, mark, audio, video {
   
   /* Add a color to the active/current link */
   .topnav a.active {
-	background-color: #04AA6D;
+	background-color:#f2849e;
 	color: white;
   }	  
 		  
@@ -155,6 +155,7 @@ section, summary, time, mark, audio, video {
     flex-direction: row;
     flex-wrap: nowrap;
 	margin-left: 50px;
+	justify-content: space-around;
 }
 .grid-container {
 		display: grid;
@@ -231,7 +232,7 @@ section, summary, time, mark, audio, video {
 		font-size: 2.75em;
 		font-weight: 700;
 		line-height: 1.3;
-		margin: 0 0 1em 0;
+		
 		letter-spacing: -0.035em;
 	}
 
@@ -379,7 +380,6 @@ section, summary, time, mark, audio, video {
 	display: flex;
 	flex-direction: row;
     flex-wrap: nowrap;
-	margin-left: -40px;
 	list-style-type: none;
 	grid-gap: 1em;
 	background-color: #a5bfd3;
@@ -499,7 +499,7 @@ section, summary, time, mark, audio, video {
 /* Header */
 
 	.header {
-		padding: 5em 0 6em 0 ;
+		padding: 4em 0 4em 0 ;
 		background-color: #a5bfd3;
 		text-align: center;
 		font-size: 20px;
